# snapshots

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  snapshots.cron
src/: auth.py  config.py  main.py  snapshot.py
